--- a/README.Rmd
+++ b/README.Rmd
@@ -11,9 +11,18 @@ knitr::opts_chunk$set(
 )
 ```
 
+
 # evoverse.datasets <img src='man/figures/logo.png' align="right" height="139" />
 
-The `evoverse.datasets` package contains datasets and their analysis results as computed with the 
+<!-- badges: start -->
+
+[![Travis build status](https://travis-ci.org/caravagn/CNAqc.svg?branch=master)](https://travis-ci.org/caravagn/CNAqc)
+[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
+[![](https://img.shields.io/badge/Part%20of-evoverse-blue.svg)](https://caravagn.github.io/evoverse)
+<!-- badges: end -->
+
+
+The `evoverse.datasets` package contains datasets and analysis computed with the 
 packages of `evoverse` [package](https://caravagn.github.io/evoverse), a collection of algorithms
 to carry out Canver Evolution analysis from tumour sequencing data.
 
@@ -22,7 +31,7 @@ to carry out Canver Evolution analysis from tumour sequencing data.
 When you load the package - `library(evoverse.datasets)` - the datasets currently available are shown. 
 Use `available_data()` to print out the summary again.
 
-To load dataset `'xxx'` use `data('xxx', package='evoverse.datasets')`.
+Example: to load dataset `'TRACERx_NEJM_2017'` use `data('TRACERx_NEJM_2017', package='evoverse.datasets')`.
 
 -----
 
@@ -42,7 +51,7 @@ devtools::install_github("caravagn/evoverse.datasets")
 
 Giulio Caravagna, PhD. _Institute of Cancer Research, London, UK_.
 
-* Personal webpage: [https://bit.ly/2kc9E6Y](https://sites.google.com/site/giuliocaravagna/), 
-* Email address: [giulio.caravagna@icr.ac.uk](mailto:giulio.caravagna@icr.ac.uk) and [gcaravagn@gmail.com](mailto:gcaravagn@gmail.com)
-* Twitter feed: [\@gcaravagna](https://twitter.com/gcaravagna)
-* GitHub space: [caravagn](https://github.com/caravagn)
+[![](https://img.shields.io/badge/Email-gcaravagn@gmail.com-seagreen.svg)](mailto:gcaravagn@gmail.com)
+[![](https://img.shields.io/badge/Github-caravagn-seagreen.svg)](https://github.com/caravagn)
+[![](https://img.shields.io/badge/Twitter-@gcaravagna-steelblue.svg)](https://twitter.com/gcaravagna)
+[![](https://img.shields.io/badge/Personal%20webpage-https://bit.ly/2kc9E6Y-red.svg)](https://sites.google.com/site/giuliocaravagna/)
