--- a/README.Rmd
+++ b/README.Rmd
@@ -28,10 +28,13 @@ to carry out Canver Evolution analysis from tumour sequencing data.
 
 #### Usage
 
-When you load the package - `library(evoverse.datasets)` - the datasets currently available are shown. 
-Use `available_data()` to print out the summary again.
+``` r
+library(evoverse.datasets)
+available_data()
 
-Example: to load dataset `'TRACERx_NEJM_2017'` use `data('TRACERx_NEJM_2017', package='evoverse.datasets')`.
+# Example load of TRACERx calls NEJM 2017
+data('TRACERx_NEJM_2017', package = 'evoverse.datasets')
+```
 
 -----
 
