--- a/README.Rmd
+++ b/README.Rmd
@@ -22,17 +22,18 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-The `evoverse.datasets` package contains datasets and analysis computed with the 
-packages of `evoverse` [package](https://caravagn.github.io/evoverse), a collection of algorithms
-to carry out Canver Evolution analysis from tumour sequencing data.
+The `evoverse.datasets` is a wrapper package  that contains datasets released within the `evoverse` package. The
+[evoverse package](https://caravagn.github.io/evoverse) is a suite of R package that can be used to implement Cancer Evolution analysis from tumour genome sequencing data.
 
 #### Usage
 
 ``` r
 library(evoverse.datasets)
+
+# Show the available data
 available_data()
 
-# Example load of TRACERx calls NEJM 2017
+# Example load of TRACERx calls from the NEJM 2017 dataset
 data('TRACERx_NEJM_2017', package = 'evoverse.datasets')
 ```
 
